2023 AoC Day02 Solution

--- a/2023/cpp/CMakeLists.txt
+++ b/2023/cpp/CMakeLists.txt
@@ -19,3 +19,4 @@ include_directories(hdr)
 # Create executables for different days
 add_day_executable(day00)
 add_day_executable(day01)
+add_day_executable(day02)
