--- a/2023/cpp/CMakeLists.txt
+++ b/2023/cpp/CMakeLists.txt
@@ -20,3 +20,4 @@ include_directories(hdr)
 add_day_executable(day00)
 add_day_executable(day01)
 add_day_executable(day02)
+add_day_executable(day03)
