2023 AoC Day04 Solution

--- a/2023/cpp/CMakeLists.txt
+++ b/2023/cpp/CMakeLists.txt
@@ -21,3 +21,4 @@ add_day_executable(day00)
 add_day_executable(day01)
 add_day_executable(day02)
 add_day_executable(day03)
+add_day_executable(day04)
