2023 AoC Day05 Solution

--- a/2023/cpp/CMakeLists.txt
+++ b/2023/cpp/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(AdventOfCode)
 
+# Set C++ standard (optional but recommended)
+set(CMAKE_CXX_STANDARD 14)  # Change 11 to the desired C++ standard version
+
+# Set optimization flags based on the build type
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")  # Add additional warning flags
+
 # Function to create an executable for a specific day
 function(add_day_executable DAY)
     # Define the sources for the executable
@@ -22,3 +28,4 @@ add_day_executable(day01)
 add_day_executable(day02)
 add_day_executable(day03)
 add_day_executable(day04)
+add_day_executable(day05)
