--- a/2023/cpp/CMakeLists.txt
+++ b/2023/cpp/CMakeLists.txt
@@ -29,3 +29,4 @@ add_day_executable(day02)
 add_day_executable(day03)
 add_day_executable(day04)
 add_day_executable(day05)
+add_day_executable(day06)
