--- a/2023/cpp/CMakeLists.txt
+++ b/2023/cpp/CMakeLists.txt
@@ -30,3 +30,5 @@ add_day_executable(day03)
 add_day_executable(day04)
 add_day_executable(day05)
 add_day_executable(day06)
+add_day_executable(day07)
+add_day_executable(day26)
